#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")
import("//foundation/communication/nfc/nfc_standard.gni")

ST_SE_TEST_DIR = "$ST_SERVICE_DIR/test/st_se_server"

config("testcase_config") {
    defines = [ "DEBUG", "ST21NFC", "VENDOR_BUILD_FOR_FACTORY" ]

    include_dirs = [
        "//utils/native/base/include",
        "$ST_SERVICE_DIR/src",
        "$ST_SERVICE_DIR/include",
        "include",
    ]
}

ohos_source_set("test_st_se_source_set") {
    public_configs = [
        ":testcase_config",
    ]

    sources = [
        "$ST_SE_TEST_DIR/src/se_server_main.cpp",
    ]

    cflags = []
    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }

    deps = [
        "//utils/native/base:utils",
        "//foundation/communication/nfc/prebuilts/librarys/nfc_st:nfc_nci_dep",
        "//foundation/communication/nfc/services/st_service:st_service",
    ]

    external_deps = [
        "hiviewdfx_hilog_native:libhilog",
        "safwk:system_ability_fwk",
        "samgr_L2:samgr_proxy",
        "ipc:ipc_core"
    ]
}

ohos_executable("stSeServerEntry") {
    deps = [
        ":test_st_se_source_set",
    ]

    install_enable = true
    part_name = "se_standard"
    subsystem_name = "communication"
}

group("st_se_test") {
    deps = [
        ":stSeServerEntry",
    ]
}
