#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//base/account/os_account/os_account.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/nfc/services/nfc_standard/nfc_standard.gni")

NFC_SE_TEST_DIR = "$SE_AGENT_DIR/test/sdk_case_test"

config("testcase_config") {
    defines = [ "DEBUG" ]

    include_dirs = [
        "//utils/native/base/include",
        "//foundation/distributedschedule/safwk/services/safwk/include",
        "$NFC_OSAL_DIR/include",
        "$NFC_AGENT_DIR/include",
        "$SE_AGENT_DIR/include",
        "$SE_AGENT_DIR/src",
        "$NFC_SE_TEST_DIR/include",
        "include",
    ]
    
    cflags = []
    if (target_cpu == "arm") {
        cflags += [ "-DBINDER_IPC_32BIT" ]
    }
}

unit_test_deps = [
    "//foundation/communication/nfc/interfaces/native_cpp/osal:osal",
    "//foundation/communication/nfc/prebuilts/librarys/nfc_st:nfc_nci_dep",
    "//foundation/communication/nfc/interfaces/native_cpp/se_standard:se_omapi",
    "//foundation/communication/nfc/services/se_standard:se_standard",
    "//foundation/communication/nfc/services/st_service:st_service",

    "//utils/native/base:utils",
    "//third_party/openssl:libcrypto_static",
    "//third_party/googletest:gtest_main",
    "//third_party/googletest:gmock_main",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/appexecfwk/standard/kits:appkit_native",
]

unit_test_external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "aafwk_standard:base",
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "samgr_L2:samgr_proxy",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ces_standard:cesfwk_kits",
    "safwk:system_ability_fwk",
]

ohos_unittest("access_control_case_test") {
    module_out_path = "se/testcase"
    sources = [
        "$NFC_SE_TEST_DIR/src/access_control_case_test.cpp",
        "$NFC_SE_TEST_DIR/src/main.cpp",
    ]
    configs = [ ":testcase_config" ]

    deps = unit_test_deps
    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

ohos_unittest("channel_case_test") {
    module_out_path = "se/testcase"
    sources = [
        "$NFC_SE_TEST_DIR/src/channel_case_test.cpp",
        "$NFC_SE_TEST_DIR/src/main.cpp",
    ]
    configs = [ ":testcase_config" ]

    deps = unit_test_deps
    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

ohos_unittest("reader_case_test") {
    module_out_path = "se/testcase"
    sources = [
        "$NFC_SE_TEST_DIR/src/reader_case_test.cpp",
        "$NFC_SE_TEST_DIR/src/main.cpp",
    ]
    configs = [ ":testcase_config" ]

    deps = unit_test_deps
    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

ohos_unittest("se_service_case_test") {
    module_out_path = "se/testcase"

    sources = [
        "$NFC_SE_TEST_DIR/src/main.cpp",
        "$NFC_SE_TEST_DIR/src/se_service_case_test.cpp",
    ]

    configs = [ ":testcase_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

ohos_unittest("session_case_test") {
    module_out_path = "se/testcase"
    sources = [
        "$NFC_SE_TEST_DIR/src/session_case_test.cpp",
        "$NFC_SE_TEST_DIR/src/main.cpp",
    ]
    configs = [ ":testcase_config" ]

    deps = unit_test_deps
    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

ohos_unittest("se_stability_test") {
    module_out_path = "se/testcase"
    sources = [
        "$NFC_SE_TEST_DIR/src/se_stability_test.cpp",
        "$NFC_SE_TEST_DIR/src/main.cpp",
        "$NFC_SE_TEST_DIR/src/utils.cpp",
    ]
    configs = [ ":testcase_config" ]

    deps = unit_test_deps
    external_deps = unit_test_external_deps

    part_name = "se_standard"
    subsystem_name = "communication"
}

group("sdk_case_test") {
    testonly = true
    deps = [
        ":session_case_test",
        ":se_service_case_test",
        ":reader_case_test",
        ":channel_case_test",
        ":access_control_case_test",
        ":se_stability_test"
    ]
}
