#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/test.gni")
import("//foundation/communication/nfc/services/nfc_standard/nfc_standard.gni")

NFC_SERVICE_UNIT_TEST_DIR = "$NFC_STANDARD_DIR/test/unittest/nfcservice-test"
OUT_THIRD_PARTY_DIR = "../../out/ohos-arm-release/obj/third_party"

config("nfc_service_unit_test_config") {
  visibility = [ ":*" ]

  include_dirs = [
        "//utils/native/base/include",
        "//foundation/distributedschedule/safwk/services/safwk/include",
        "$NFC_ST_DIR/include/system-nfc",
        "$NFC_ST_DIR/include/stnfc/include/hardware/st21nfc/gki/ulinux",
        "$NFC_ST_DIR/include/stnfc/include/hardware/st21nfc/include",
        "$NFC_ST_DIR/include/stnfc/include/src/include",
        "$NFC_ST_DIR/include/stnfc/include/src/gki/ulinux",
        "$NFC_ST_DIR/include/stnfc/include/src/gki/common",
        "$NFC_ST_DIR/include/stnfc/include/src/nfc/include",
        "$NFC_ST_DIR/include/stnfc/include/src/nfa/include",
        "$NFC_ST_DIR/include/stnfc/include/utils/include",
        "$NFC_OSAL_DIR/include",
        "$NFC_AGENT_DIR/include",
        "$NFC_AGENT_DIR/src",
        "$NFC_AGENT_DIR/src/sdk-reader/include",
        "$NFC_AGENT_DIR/src/sdk-reader/src",
        "$NFC_STANDARD_DIR/include",
        "$NFC_STANDARD_DIR/src",
        "$NFC_STANDARD_DIR/src/service-ncibal/include",
        "$NFC_STANDARD_DIR/src/service-ncibal/src",
        "$NFC_STANDARD_DIR/src/service-reader/include",
        "$NFC_STANDARD_DIR/src/service-reader/src",
        "$NFC_STANDARD_DIR/src/service-cardemulation/include",
        "$NFC_STANDARD_DIR/src/service-cardemulation/src",
        "include",
        "src",
        "src/test-reader",
        "src/test-ncibal",
        "src/test-cardemulation"
    ]

    defines = [ "DEBUG", "_NFC_SERVICE_READER_", "ST21NFC", "VENDOR_BUILD_FOR_FACTORY", "_NFC_SERVICE_HCE_", "USE_HILOG", "MOCK_FOR_TESTING" ]

    cflags_cc = [ "-fexceptions" ]
    ldflags = ["-L$OUT_THIRD_PARTY_DIR/openssl", "-L$OUT_THIRD_PARTY_DIR/zlib" ]
    libs = ["z", "crypto_static"]
}

unit_test_deps = [
    "//foundation/communication/nfc/prebuilts/librarys/nfc_st:nfc_nci_dep",
    "//foundation/communication/nfc/interfaces/native_cpp/osal:osal",
    "//foundation/communication/nfc/interfaces/native_cpp/nfc_standard:nfc_agent",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/communication/nfc/services/nfc_standard:nfc_standard",
    "//foundation/communication/nfc/prebuilts/librarys/nfc_st:nfc_nci_dep",
    "//third_party/googletest:gtest_main",
    "//third_party/googletest:gmock_main",
    "//utils/native/base:utils",
]

unit_test_external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "aafwk_standard:base",
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "samgr_L2:samgr_proxy",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
]

ohos_unittest("device_host_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/device_host_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_nci_mock.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("foreground_utils_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/foreground_utils_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("nfc_agent_service_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_agent_service_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("nfc_discovery_params_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_discovery_params_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("nfc_permissions_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_permissions_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("nfc_service_handler_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_service_handler_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("nfc_service_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_service_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-ncibal/device_host_mock.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("screen_state_helper_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/screen_state_helper_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("tag_dispatcher_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/tag_dispatcher_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("tag_end_point_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/tag_end_point_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/nfc_nci_mock.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("tag_session_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/tag_session_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

ohos_unittest("watch_dog_test") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/watch_dog_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-ncibal/device_host_mock.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}


ohos_unittest("service_cardemulation_unittest") {
    module_out_path = "nfc/service"

    sources = [
        "$NFC_SERVICE_UNIT_TEST_DIR/src/main.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/test_util.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/aid_set_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/aid_string_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/apdu_channel_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/aid_routing_planner_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/aid_routing_adapter_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_agent_stub_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_device_host_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_service_info_manager_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_manager_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_service_info_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_service_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/card_emulation_util_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/tag_priority_policy_test.cpp",
        "$NFC_SERVICE_UNIT_TEST_DIR/src/test-cardemulation/it_aid_routing_planner_test.cpp",
    ]

    configs = [ ":nfc_service_unit_test_config" ]

    deps = unit_test_deps

    external_deps = unit_test_external_deps

    part_name = "nfc_standard"
    subsystem_name = "communication"
}

group("nfc_service_unit_test") {
    testonly = true

    deps = [
        ":service_cardemulation_unittest"
#        ":ohos_gtest_test",
#        ":device_host_test",
#        ":foreground_utils_test",
#        ":nfc_discovery_params_test",
#        ":nfc_agent_service_test",
#        ":nfc_permissions_test",
#        ":nfc_service_handler_test",
#        ":nfc_service_test",
#        ":screen_state_helper_test",
#        ":tag_dispatcher_test",
#        ":tag_end_point_test",
#        ":tag_session_test",
#        ":watch_dog_test",
    ]
}
